--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h3>Hello It's Me</h3>
     <h1>Aris Sinopa as Ais</h1>
     <h3>Welcome to my <span>Personal Website</span></h3>
-    <p>Thank For coming and don't forget to follow</p>
+    <p>Thank For coming and don't forget to follow!</p>
     <div class="social-media">
       <a href=""><i class='bx bxl-facebook'></i></a>
       <a href=""><i class='bx bxl-linkedin-square'></i></a>
